--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -1,4 +1,5 @@
 $gray-dark:                 #000;
+$gray-middlescale:          #777;
 $gray:                      #a8a8a8;
 $gray-light:                #d9d9d9;
 $gray-lighter:              #f0f0f0;
