--- a/src/index.jade
+++ b/src/index.jade
@@ -9,136 +9,141 @@ html(lang="en")
 
         style(type='text/css')
             include main.css
+        script(src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous")
+        script(type="text/javascript")
+            include index.js
     body
         header(class='header')
             .container-fluid
                 h1(class='header__title')= api.apiTitle
                 p(class='header__subtitle')= api.apiDescription
-                    span(class='text-primary #{api.apiDescription ? "pull-xs-right" : ""}')= api.apiBaseUri
+                span(class='header__uri text-primary #{api.apiDescription ? "pull-xs-right" : ""}')= api.apiBaseUri
         main
             .container-fluid
                 .row
-                    .col-md-3
-                        section(class='resources')
+                    .col-md-3.sidebar
+                        section(class='resources sidebar-content')
                             h1(class='resources__header') Resources
                             ul(class='resources__list')
                                 each resource in api.apiResources
                                     li= resource.name
-                                        ul(class='resources__list__endpoints')
-                                            each endpoint in resource.endpoints
-                                                li
-                                                    case endpoint.method
-                                                        when 'get': span(class='label label-primary')= endpoint.method
-                                                        when 'post': span(class='label label-success')= endpoint.method
-                                                        when 'put': span(class='label label-warning')= endpoint.method
-                                                        when 'delete': span(class='label label-danger')= endpoint.method
-                                                    a(href='#' + '#{helpers.uri2Identifier(endpoint.uri)}')= endpoint.uri
-                    .col-md-9
+                                    ul(class='resources__list__endpoints')
+                                        each endpoint in resource.endpoints
+                                            li
+                                                case endpoint.method
+                                                    when 'get': span(class='label label-primary')= endpoint.method
+                                                    when 'post': span(class='label label-success')= endpoint.method
+                                                    when 'put': span(class='label label-warning')= endpoint.method
+                                                    when 'delete': span(class='label label-danger')= endpoint.method
+                                                a(href='#' + '#{helpers.uriWithMethodIdentifier(endpoint.uri, endpoint.method)}')= endpoint.uri
+                    .col-md-9.col-md-offset-3
                         each documentation in api.apiDocumentations
                             section(class='documentation')
                                 h1(class='documentation__header')= documentation.title
                                 p(class='documentation__content')= documentation.content
 
                         each resource in api.apiResources
-                            section(class='documentation')
+                            section(class='documentation row')
                                 h1(class='documentation__header')= resource.name
 
                                 each endpoint in resource.endpoints
                                     div(class='documentation__endpoints')
-                                        a(name='#{helpers.uri2Identifier(endpoint.uri)}')
-                                        p(class='documentation__endpoints__name')
-                                            case endpoint.method
-                                                when 'get': span(class='label label-primary')= endpoint.method
-                                                when 'post': span(class='label label-success')= endpoint.method
-                                                when 'put': span(class='label label-warning')= endpoint.method
-                                                when 'delete': span(class='label label-danger')= endpoint.method
-                                            = endpoint.uri
+                                        a(name='#{helpers.uriWithMethodIdentifier(endpoint.uri, endpoint.method)}')
+                                        .documentation__endpoints__params
+                                            p(class='documentation__endpoints__name')
+                                                case endpoint.method
+                                                    when 'get': span(class='label label-primary')= endpoint.method
+                                                    when 'post': span(class='label label-success')= endpoint.method
+                                                    when 'put': span(class='label label-warning')= endpoint.method
+                                                    when 'delete': span(class='label label-danger')= endpoint.method
+                                                = endpoint.uri
 
-                                        p(class='documentation__endpoints__description')= endpoint.description
+                                            p(class='documentation__endpoints__description')= endpoint.description
 
-                                        .row.documentation__endpoints__container
-                                            .col-md-8.documentation__endpoints__left
-                                                if endpoint.uriParameters && endpoint.uriParameters.length
-                                                    table(class='documentation__parameters table')
-                                                        thead
+                                            if endpoint.uriParameters && endpoint.uriParameters.length
+                                                table(class='documentation__parameters table')
+                                                    thead
+                                                        tr
+                                                            th name
+                                                            th type
+                                                            th description
+                                                    tbody
+                                                        each parameter in endpoint.uriParameters
                                                             tr
-                                                                th name
-                                                                th type
-                                                                th description
-                                                        tbody
-                                                            each parameter in endpoint.uriParameters
-                                                                tr
-                                                                    td= parameter.name
-                                                                    td= parameter.type
-                                                                    td= parameter.description
+                                                                td= parameter.name
+                                                                td= parameter.type
+                                                                td= parameter.description
 
-                                                if endpoint.queryParameters && endpoint.queryParameters.length
-                                                    h2(class='documentation__subheader') Query Parameters
-                                                    table(class='documentation__parameters table')
-                                                        thead
+                                            if endpoint.queryParameters && endpoint.queryParameters.length
+                                                h2(class='documentation__subheader') Query Parameters
+                                                table(class='documentation__parameters table')
+                                                    thead
+                                                        tr
+                                                            th name
+                                                            th type
+                                                            th description
+                                                    tbody
+                                                        each parameter in endpoint.queryParameters
                                                             tr
-                                                                th name
-                                                                th type
-                                                                th description
-                                                        tbody
-                                                            each parameter in endpoint.queryParameters
-                                                                tr
-                                                                    td= parameter.name
-                                                                    if parameter.repeat
-                                                                        td [ #{parameter.type} ]
-                                                                    else
-                                                                        td #{parameter.type}
-                                                                    td= parameter.description
+                                                                td= parameter.name
+                                                                if parameter.repeat
+                                                                    td [ #{parameter.type} ]
+                                                                else
+                                                                    td #{parameter.type}
+                                                                td= parameter.description
 
-                                                if endpoint.requestBody && endpoint.requestBody.length
-                                                    h2(class='documentation__subheader') Request
-                                                    table(class='documentation__parameters table')
-                                                        thead
+                                            if endpoint.requestBody && endpoint.requestBody.length
+                                                h2(class='documentation__subheader') Request
+                                                table(class='documentation__parameters table')
+                                                    thead
+                                                        tr
+                                                            th name
+                                                            th type
+                                                            th description
+                                                    tbody
+                                                        each property in endpoint.requestBody
                                                             tr
-                                                                th name
-                                                                th type
-                                                                th description
-                                                        tbody
-                                                            each property in endpoint.requestBody
-                                                                tr
-                                                                    td= property.name
-                                                                    if property.isRequired
-                                                                        span(class='text-primary') *
-                                                                    td= property.type
-                                                                    td= property.description
+                                                                td= property.name
+                                                                if property.isRequired
+                                                                    span(class='text-primary') *
+                                                                td= property.type
+                                                                td= property.description
 
-                                                if endpoint.responseBody && endpoint.responseBody.length
-                                                    h2(class='documentation__subheader')= 'Response '
-                                                        span(class='text-success') (200)
-                                                    table(class='documentation__parameters table')
-                                                        thead
+                                            if endpoint.responseBody && endpoint.responseBody.length
+                                                h2(class='documentation__subheader')= 'Response '
+                                                span(class='text-success') (200)
+                                                table(class='documentation__parameters table')
+                                                    thead
+                                                        tr
+                                                            th name
+                                                            th type
+                                                            th description
+                                                    tbody
+                                                        each property in endpoint.responseBody
                                                             tr
-                                                                th name
-                                                                th type
-                                                                th description
-                                                        tbody
-                                                            each property in endpoint.responseBody
-                                                                tr
-                                                                    td= property.name
-                                                                        if property.isRequired
+                                                                td= property.name
+                                                                if property.isRequired
+                                                                    span(class='text-primary') *
+                                                                td= property.type
+                                                                td= property.description
+                                                            if property.nestedProperties.length
+                                                                each nested in property.nestedProperties
+                                                                    tr(class='documentation__parameters__nested')
+                                                                        td= nested.name
+                                                                        if nested.isRequired
                                                                             span(class='text-primary') *
-                                                                    td= property.type
-                                                                    td= property.description
-                                                                if property.nestedProperties.length
-                                                                    each nested in property.nestedProperties
-                                                                        tr(class='documentation__parameters__nested')
-                                                                            td= nested.name
-                                                                            if nested.isRequired
-                                                                                span(class='text-primary') *
-                                                                            td= nested.type
-                                                                            td= nested.description
-
-                                            .col-md-4.documentation__endpoints__right
-                                                if endpoint.responseExample
-                                                    h2(class='documentation__subheader')= 'Example '
-                                                        span(class='text-success') (200)
-                                                    pre
-                                                        code !{endpoint.responseExample}
+                                                                        td= nested.type
+                                                                        td= nested.description
+                                        .documentation__endpoints__examples
+                                            if endpoint.responseExample
+                                                h2(class='documentation__subheader')= 'Examples '
+                                                ul.examples__list
+                                                    each example, index in endpoint.responseExample
+                                                        li.examples__example.example__tab
+                                                            input(class='text-success' type='radio' id='example-tab-#{index}')
+                                                            label(for='example-tab-#{index}') (#{example.code})
+                                                            pre
+                                                                code !{example.response}
         footer(class='footer')
             .container-fluid
                 p(class='footer__text') powered by
