--- a/src/main.scss
+++ b/src/main.scss
@@ -104,9 +104,20 @@ pre, code {
     a {
         color: inherit;
         text-decoration: none;
+        font-size: 0.875rem;
+        transition: all 0.2s linear;
 
         &:hover, &:focus {
             text-decoration: underline;
+        }
+        //&:active {
+        //    text-decoration: none;
+        //}
+
+        &.is-current {
+            font-weight: 700;
+            color: $gray-dark;
+            text-decoration: none;
         }
     }
 }
