--- a/src/main.scss
+++ b/src/main.scss
@@ -238,7 +238,7 @@ pre, code {
 }
 
 .documentation__endpoints__description {
-    color: $gray;
+    color: $gray-middlescale;
 }
 
 .documentation__subheader {
