--- a/src/main.scss
+++ b/src/main.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 @import "styles/theme";
+@import "styles/mixins";
 @import "styles/bootstrap";
 @import "styles/theme-components";
 @import "styles/examples";
@@ -45,13 +46,34 @@ pre, code {
 
 .sidebar {
     position: relative;
-    border-right: 1px solid #ccc;
     transition: all 0.3s linear;
     $root: &;
     &-content {
         position: absolute;
         top: 0;
-        padding-top: 20px;
+        left: 0;
+        padding: 20px 15px 0;
+
+        //customizing the sidebar scrollbar
+        &::-webkit-scrollbar {
+            width: 8px;
+        }
+
+        &::-webkit-scrollbar-track {
+            -webkit-box-shadow: inset 1px 0 3px $gray-light;
+            background: $scrollbar-custom-track;
+            border-radius: 0;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            width: 6px;
+            position: relative;
+            left: 1px;
+            border-radius: 1px;
+            -webkit-box-shadow: none;
+            background: $scrollbar-custom-thumb;
+        }
+
     }
     &.is-abs {
         position: absolute;
@@ -59,8 +81,16 @@ pre, code {
     &.is-fixed {
         #{$root}-content {
             position: fixed;
-
             top: 0;
+            bottom: 0;
+            padding-right: 15px;
+            overflow-y: scroll;
+            width: 16.66667%;
+            min-width: 200px;
+
+            /*below mixin is an optional effect added to sidebar*/
+            //@include shrouded-element-fixed(16.66667%);
+
         }
     }
 }
@@ -79,6 +109,7 @@ pre, code {
 .resources__list {
     padding: 0;
     list-style: none;
+    margin-bottom: 2 * $spacer;
 
     li {
         margin: $spacer / 2 0 $spacer;
@@ -107,6 +138,8 @@ pre, code {
         font-size: 0.875rem;
         transition: all 0.2s linear;
 
+        word-break: break-all;
+
         &:hover, &:focus {
             text-decoration: underline;
         }
@@ -116,7 +149,7 @@ pre, code {
 
         &.is-current {
             font-weight: 700;
-            color: $gray-dark;
+            color: $pitch-black;
             text-decoration: none;
         }
     }
@@ -135,7 +168,7 @@ pre, code {
 .documentation__header {
     position: relative;
     margin: 0 0;
-    padding: 2*$spacer 10px 2*$spacer;
+    padding: 2*$spacer 10px 2*$spacer 20px;
     font-size: $font-size-h2;
     font-weight: 700;
     width: 60%;
@@ -146,13 +179,19 @@ pre, code {
     }
 
     &:after {
-        content: '';
-        position: absolute;
-        left: 100%;
-        width: 66.67%;
-        top: 0;
-        bottom: 0;
-        background-color: #333;
+        @include empty-sidebar-right;
+    }
+}
+
+.documentation__content {
+    position: relative;
+    margin: 0 0;
+    padding: 2*$spacer 10px 2*$spacer 20px;
+    width: 60%;
+    display: inline-block;
+
+    &:after {
+        @include empty-sidebar-right;
     }
 }
 
@@ -180,7 +219,7 @@ pre, code {
     min-height: 100px;
     width: 60%;
     position: relative;
-    padding: $spacer * 2 10px $spacer * 2;
+    padding: $spacer * 2 10px $spacer * 2 20px;
     border-bottom: 1px solid $gray-light;
 }
 
@@ -190,7 +229,7 @@ pre, code {
     padding: 0px 10px;
     padding-top: $spacer * 2;
     position: relative;
-    background-color: #333;
+    background-color: $gray-dark;
     color: #fcfcfc;
     border-bottom: 1px solid $gray-middlescale;
 }
