--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -8,7 +8,7 @@
     background-color: $gray-dark;
 }
 
-@mixin shrouded-element {
+@mixin shrouded-element($shroud-color: #fff) {
     &:after {
         content: '';
         position: absolute;
@@ -16,7 +16,7 @@
         bottom: 0;
         left: 0;
         width: 100%;
-        background: linear-gradient(to bottom, rgba(#fff, 0) 92%, rgba(#fff, 1) 100%);
+        background: linear-gradient(to bottom, rgba($shroud-color, 0) 90%, rgba($shroud-color, 1) 100%);
         pointer-events: none; // most important to this element
     }
 }
