--- a/src/index.jade
+++ b/src/index.jade
@@ -15,7 +15,7 @@ html(lang="en")
     body
         header(class='header')
             .container-fluid
-                h1(class='header__title')= api.apiTitle
+                h1(class='header__title', title=api.apiProtocol )= api.apiTitle
                 p(class='header__subtitle')= api.apiDescription
                 span(class='header__uri text-primary #{api.apiDescription ? "pull-xs-right" : ""}')= api.apiBaseUri
         main
